2009-11-11  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-util.c: Small safety tweaks for last commit. Just in 
	  case something is in a strange state, and also changes to avoid
	  warnings when compiled with -fstrict-aliasing -Wall.

	Fixes: NB#144050, NB#146154 : Popup/dialog closing transitions are
	       occurring even when the window is not visible.
	       
	* src/util/hd-util.c/h: Add hd_util_client_obscured, which checks the
	  windows above the parameter to see if they obscure it or not.
	* src/mb/hd-comp-mgr.c: Check with hd_util_client_obscured before
	  starting the unmap transition for dialogs/popups.

2009-11-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.117-1

2009-11-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#142968 Task Launcher list missing rubberband effect

	* src/launcher/hd-launcher-grid.c 
	(hd_launcher_grid_refresh_v_adjustment):
	  Correct padding at the bottom of the sublauncher and enable
	  the rubber effect.
	* src/tidy/tidy-adjustment.c:
	  Introduced the skirt parameter to allow for temporary overshooting.
	* src/tidy/tidy-finger-scroll.c:
	  * motion_event_cb(): removed unnecessary interpolation
	  * deceleration_new_frame_cb(): redid for rubbing
	  * decel_rate: changed the meaning to be its inverse
	    and changed the value from 0.91 to 0.9

2009-11-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Thinko/regression fix/memory leak plug.

	* src/launcher/hd-launcher.c (hd_launcher_application_tile_clicked):
	  We never remembered the $tile being clicked so we just added the
	  weak ref but didn't clean it up later and didn't center the explosion
	  in the icon either.

2009-11-10  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Remove MAEMO_SCREEN_WIDTH/HEIGHT properties, those were replaced with
	MAEMO_SCREEN_SIZE.

	* debian/control: Depend on libgtk2.0-0 (>= 2:2.14.7-1maemo15).
	* src/util/hd-util.c (hd_util_set_screen_size_properties): Set
	MAEMO_SCREEN_SIZE only.