@@ -1,3 +1,11 @@
+2009-11-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Fixes: NB#142333 - Ctrl + <char> or Ctrl + <shift> + <char>- Launches
+	the contacts application
+
+	* src/home/hd-home.c (hd_home_desktop_key_press,
+	hd_home_desktop_key_release): Ignore key events with ControlMask set.
+
 2009-11-11  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	* src/util/hd-util.c: Small safety tweaks for last commit. Just in 
